--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+a {
+    @apply underline text-blue-600 hover:text-blue-800
+ }
+
+ code {
+    @apply bg-blue-100 rounded-sm
+ }
